--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
